--- a/module3/index.html
+++ b/module3/index.html
@@ -9,58 +9,70 @@
   <title>Homework - Module 3</title>
 </head>
 <body>
-	<div class="container">
-    <header class="header">
-      <nav class="menu">
-        <ul>
-          <li><a href="#">lifestyle</a></li>
-          <li><a href="#">photodiary</a></li>
-          <li><a href="#">music</a></li>
-          <li><a href="#">travel</a></li>
+  <header class="header">
+		<div class="container">
+			<nav class="navigation">
+        <ul class="header__list">
+          <li class="header__list-item">
+						<a href="#" class="header__list-link">lifestyle</a>
+					</li>
+          <li class="header__list-item">
+						<a href="#" class="header__list-link">photodiary</a>
+					</li>
+          <li class="header__list-item">
+						<a href="#" class="header__list-link">music</a>
+					</li>
+          <li class="header__list-item">
+						<a href="#" class="header__list-link">travel</a>
+					</li>
         </ul>
-      </nav>
-		</header>
-		<main class="main">
-			<article class="article">
-				<img src="img/img-01.jpg" alt="" width="420" height="280">
-				<div class="category">lifestyle</div>
-				<h2>More than just a music festival</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
-			</article>
-			<article class="article">
-				<img src="img/img-02.jpg" alt="" width="420" height="280">
-				<div class="category">lifestyle</div>
-				<h2>Life tastes better with coffee</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
-			</article>
-			<article class="article">
-				<img src="img/img-03.jpg" alt="" width="420" height="280">
-				<div class="category">photodiary</div>
-				<h2>American dream</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
-			</article>
-			<article class="article">
-				<img src="img/img-04.jpg" alt="" width="420" height="280">
-				<div class="category">photodiary</div>
-				<h2>A day exploring the Alps</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
-			</article>
-			<article class="article">
-				<img src="img/img-05.jpg" alt="" width="420" height="280">
-				<div class="category">lifestyle</div>
-				<h2>Top 10 song for running</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
-			</article>
-			<article class="article">
-				<img src="img/img-06.jpg" alt="" width="420" height="280">
-				<div class="category">lifestyle</div>
-				<h2>Cold winter days</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
-			</article>
-			
+			</nav>
+		</div>
+	</header>
+	<main class="main">
+		<div class="container">
+			<section class="news">
+				<article class="article">
+					<img src="img/img-01.jpg" alt="" width="420" height="280">
+					<div class="category">lifestyle</div>
+					<h2>More than just a music festival</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
+				</article>
+				<article class="article">
+					<img src="img/img-02.jpg" alt="" width="420" height="280">
+					<div class="category">lifestyle</div>
+					<h2>Life tastes better with coffee</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
+				</article>
+				<article class="article">
+					<img src="img/img-03.jpg" alt="" width="420" height="280">
+					<div class="category">photodiary</div>
+					<h2>American dream</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
+				</article>
+				<article class="article">
+					<img src="img/img-04.jpg" alt="" width="420" height="280">
+					<div class="category">photodiary</div>
+					<h2>A day exploring the Alps</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
+				</article>
+				<article class="article">
+					<img src="img/img-05.jpg" alt="" width="420" height="280">
+					<div class="category">lifestyle</div>
+					<h2>Top 10 song for running</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
+				</article>
+				<article class="article">
+					<img src="img/img-06.jpg" alt="" width="420" height="280">
+					<div class="category">lifestyle</div>
+					<h2>Cold winter days</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
+				</article>
+			</section>
+			<section class="more">
 				<button class="btn">Load more</button>
-		
-		</main>
-  </div>  
+			</section>
+		</div>
+	</main>
 </body>
 </html>
