--- a/module3/index.html
+++ b/module3/index.html
@@ -33,44 +33,44 @@
 		<div class="container">
 			<section class="news">
 				<article class="article">
-					<img src="img/img-01.jpg" alt="" width="420" height="280">
-					<div class="category">lifestyle</div>
-					<h2>More than just a music festival</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
+					<img src="img/img-01.jpg" alt="" class="article__img" width="420" height="280">
+					<div class="article__category">lifestyle</div>
+					<h2 class="article__title">More than just a music festival</h2>
+					<p class="article__content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
 				</article>
 				<article class="article">
-					<img src="img/img-02.jpg" alt="" width="420" height="280">
-					<div class="category">lifestyle</div>
-					<h2>Life tastes better with coffee</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
+					<img src="img/img-02.jpg" alt="" class="article__img" width="420" height="280">
+					<div class="article__category">lifestyle</div>
+					<h2 class="article__title">Life tastes better with coffee</h2>
+					<p class="article__content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
 				</article>
 				<article class="article">
-					<img src="img/img-03.jpg" alt="" width="420" height="280">
-					<div class="category">photodiary</div>
-					<h2>American dream</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
+					<img src="img/img-03.jpg" alt="" class="article__img" width="420" height="280">
+					<div class="article__category">photodiary</div>
+					<h2 class="article__title">American dream</h2>
+					<p class="article__content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
 				</article>
 				<article class="article">
-					<img src="img/img-04.jpg" alt="" width="420" height="280">
-					<div class="category">photodiary</div>
-					<h2>A day exploring the Alps</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
+					<img src="img/img-04.jpg" alt="" class="article__img" width="420" height="280">
+					<div class="article__category">photodiary</div>
+					<h2 class="article__title">A day exploring the Alps</h2>
+					<p class="article__content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
 				</article>
 				<article class="article">
-					<img src="img/img-05.jpg" alt="" width="420" height="280">
-					<div class="category">lifestyle</div>
-					<h2>Top 10 song for running</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
+					<img src="img/img-05.jpg" alt="" class="article__img" width="420" height="280">
+					<div class="article__category">lifestyle</div>
+					<h2 class="article__title">Top 10 song for running</h2>
+					<p class="article__content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
 				</article>
 				<article class="article">
-					<img src="img/img-06.jpg" alt="" width="420" height="280">
-					<div class="category">lifestyle</div>
-					<h2>Cold winter days</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
+					<img src="img/img-06.jpg" alt="" class="article__img" width="420" height="280">
+					<div class="article__category">lifestyle</div>
+					<h2 class="article__title">Cold winter days</h2>
+					<p class="article__content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
 				</article>
 			</section>
-			<section class="more">
-				<button class="btn">Load more</button>
+			<section class="load-more">
+				<button class="load-more__btn">Load more</button>
 			</section>
 		</div>
 	</main>
