--- a/module4/index.html
+++ b/module4/index.html
@@ -4,16 +4,137 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="css/styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Roboto:300,900&display=swap" rel="stylesheet">
   <title>Module4</title>
 </head>
 <body>
-  <header class="navigation">
+  <header class="header">
     <div class="container">
-      <nav class="navigation"></nav>
-        <a href="" class="lnavigation__logo"></a>
-            ul>li.
+      <nav class="navigation clearfix">
+        <a href="#" class="logo">Mart</a>
+        <ul class="header__list clearfix">
+          <li class="header__list-item">
+            <a href="#" class="header__list-link">Home</a></li>
+          <li class="header__list-item">
+            <a href="#" class="header__list-link">About us</a></li>
+          <li class="header__list-item">
+            <a href="#" class="header__list-link">Page</a></li>
+          <li class="header__list-item">
+            <a href="#" class="header__list-link">Shop</a></li>
+          <li class="header__list-item">
+            <a href="#" class="header__list-link">Blog</a></li>
+          <li class="header__list-item">
+            <a href="#" class="header__list-link">Contact us</a></li>
+        </ul>
+      </nav>
     </div>
   </header>
-  <main></main>
+  <main class="main">
+    <section class="featured">
+      <div class="container">
+        <h2 class="sections-title">Featured products</h2>
+        <ul class="featured__list clearfix">
+          <li class="featured__list-item">
+            <a href="#" class="featured__price-link">
+              <img src="img/products/product-01.jpg" alt="" class="featured__img">
+              <div class="featured__price-block clearfix">
+                <div class="featured__price-title">Blue Tshirt</div>
+                <div class="featured__price">$26</div>
+              </div>
+            </a>
+          </li>
+          <li class="featured__list-item">
+            <a href="#" class="featured__price-link">
+              <img src="img/products/product-02.jpg" alt="" class="featured__img">
+              <div class="featured__price-block clearfix">
+                <div class="featured__price-title">Woman shirt</div>
+                <div class="featured__price">$26</div>
+              </div>
+            </a>
+          </li>
+          <li class="featured__list-item">
+            <a href="#" class="featured__price-link">
+              <img src="img/products/product-03.jpg" alt="" class="featured__img">
+              <div class="featured__price-block clearfix">
+                <div class="featured__price-title">Yellow tshirt</div>
+                <div class="featured__price">$26</div>
+              </div>
+            </a>
+          </li>
+          <li class="featured__list-item">
+            <a href="#" class="featured__price-link">
+              <img src="img/products/product-04.jpg" alt="" class="featured__img">
+              <div class="featured__price-block clearfix">
+                <div class="featured__price-title">Cool lingerie</div>
+                <div class="featured__price">$26</div>
+              </div>
+            </a>
+          </li>          
+          <li class="featured__list-item">
+            <a href="#" class="featured__price-link">
+              <img src="img/products/product-05.jpg" alt="" class="featured__img">
+              <div class="featured__price-block clearfix">
+                <div class="featured__price-title">Blue Tshirt</div>
+                <div class="featured__price">$26</div>
+              </div>
+            </a>
+          </li>
+          <li class="featured__list-item">
+            <a href="#" class="featured__price-link">
+              <img src="img/products/product-06.jpg" alt="" class="featured__img">
+              <div class="featured__price-block clearfix">
+                <div class="featured__price-title">Woman shirt</div>
+                <div class="featured__price">$26</div>
+              </div>
+            </a>
+          </li>
+          <li class="featured__list-item">
+            <a href="#" class="featured__price-link">
+              <img src="img/products/product-07.jpg" alt="" class="featured__img">
+              <div class="featured__price-block clearfix">
+                <div class="featured__price-title">Yellow tshirt</div>
+                <div class="featured__price">$26</div>
+              </div>
+            </a>
+          </li>
+          <li class="featured__list-item">
+            <a href="#" class="featured__price-link">
+              <img src="img/products/product-08.jpg" alt="" class="featured__img">
+              <div class="featured__price-block clearfix">
+                <div class="featured__price-title">Cool lingerie</div>
+                <div class="featured__price">$26</div>
+              </div>
+            </a>
+          </li>                
+        </ul>
+      </div>
+    </section>
+    <section class="news">
+      <div class="container">
+        <h2 class="sections-title">Last news</h2>
+        <ul class="news__list clearfix">
+          <li class="news__list-item">
+            <img src="img/news/news-01.jpg" alt="" class="news__list-img">
+            <h3 class="news__list-title">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
+            <p class="news__list-description">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt </p>
+            <button class="news__list-btn">Read more</button>
+          </li>
+          <li class="news__list-item">
+            <img src="img/news/news-02.jpg" alt="" class="news__list-img">
+            <h3 class="news__list-title">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
+            <p class="news__list-description">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt </p>
+            <button class="news__list-btn">Read more</button>           
+          </li>
+          <li class="news__list-item">
+            <img src="img/news/news-03.jpg" alt="" class="news__list-img">
+            <h3 class="news__list-title">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
+            <p class="news__list-description">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt </p>
+            <button class="news__list-btn">Read more</button>
+          </li>
+        </ul>
+      </div>
+    </section>
+  </main>
 </body>
 </html>
