--- a/module4/index.html
+++ b/module4/index.html
@@ -118,19 +118,19 @@
             <img src="img/news/news-01.jpg" alt="" class="news__list-img">
             <h3 class="news__list-title">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
             <p class="news__list-description">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt </p>
-            <button class="news__list-btn">Read more</button>
+            <a href="#" class="news__list-btn">Read more</a>
           </li>
           <li class="news__list-item">
             <img src="img/news/news-02.jpg" alt="" class="news__list-img">
             <h3 class="news__list-title">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
             <p class="news__list-description">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt </p>
-            <button class="news__list-btn">Read more</button>           
+            <a href="#"  class="news__list-btn">Read more</a>           
           </li>
           <li class="news__list-item">
             <img src="img/news/news-03.jpg" alt="" class="news__list-img">
             <h3 class="news__list-title">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
             <p class="news__list-description">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt </p>
-            <button class="news__list-btn">Read more</button>
+            <a href="#" class="news__list-btn">Read more</a>
           </li>
         </ul>
       </div>
