--- a/module5/index.html
+++ b/module5/index.html
@@ -6,9 +6,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="stylesheet" href="css/styles.css">
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Roboto:300,900&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="css/Pe-icon-7-stroke.css">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Roboto:300,900&display=swap"
+		rel="stylesheet">
 	<title>Module5</title>
 </head>
+
 <body>
 	<header class="header">
 		<div class="container">
@@ -36,9 +39,98 @@
 			<div class="overlay">
 				<h1 class="slider__title">AFFORDABLE PARIS TOURS</h1>
 				<h3 class="slider__subtitle">CITY TOURS / TOUR TICKETS / TOUR GUIDES</h3>
-			</div>	
-			
+			</div>
+			<div class="slider__btns clearfix">
+				<button class="slider__btn prev inactive"></button>
+				<button class="slider__btn next"></button>
+			</div>
 		</section>
+		<section class="featured">
+			<div class="container">
+				<h2 class="sections-title">Featured products</h2>
+				<ul class="featured__list clearfix">
+					<li class="featured__list-item">
+						<img src="img/products/product-01.jpg" alt="" class="featured__img">
+						<div class="featured__price-block clearfix">
+							<div class="featured__price-title">Blue Tshirt</div>
+							<div class="featured__price">$26</div>
+						</div>
+						<div class="featured__overlay">
+							<ul class="cart-btns clearfix">
+								<li class="cart-btns__item">
+									<a href="#" class="cart-btns__link"></a></li>
+								<li class="cart-btns__item">
+									<a href="#" class="cart-btns__link"></a></li>
+								<li class="cart-btns__item">
+									<a href="#" class="cart-btns__link"></a></li>
+								<li class="cart-btns__item">
+									<a href="#" class="cart-btns__link">add to cart</a></li>
+							</ul>
+						</div>
+					</li>
+					<li class="featured__list-item">
+						<img src="img/products/product-02.jpg" alt="" class="featured__img">
+						<div class="featured__price-block clearfix">
+							<div class="featured__price-title">Woman shirt</div>
+							<div class="featured__price">$31</div>
+						</div>
+						<div class="featured__overlay">
+							<ul class="cart-btns clearfix">
+								<li class="cart-btns__item">
+									<a href="#" class="cart-btns__link"></a></li>
+								<li class="cart-btns__item">
+									<a href="#" class="cart-btns__link"></a></li>
+								<li class="cart-btns__item">
+									<a href="#" class="cart-btns__link"></a></li>
+								<li class="cart-btns__item">
+									<a href="#" class="cart-btns__link">add to cart</a></li>
+							</ul>
+						</div>
+					</li>
+					<li class="featured__list-item">
+						<img src="img/products/product-03.jpg" alt="" class="featured__img">
+						<div class="featured__price-block clearfix">
+							<div class="featured__price-title">Yellow tshirt</div>
+							<div class="featured__price">$21</div>
+						</div>
+						<div class="featured__overlay">
+							<ul class="cart-btns clearfix">
+								<li class="cart-btns__item">
+									<a href="#" class="cart-btns__link"></a></li>
+								<li class="cart-btns__item">
+									<a href="#" class="cart-btns__link"></a></li>
+								<li class="cart-btns__item">
+									<a href="#" class="cart-btns__link"></a></li>
+								<li class="cart-btns__item">
+									<a href="#" class="cart-btns__link">add to cart</a></li>
+							</ul>
+						</div>
+					</li>
+					<li class="featured__list-item">
+						<img src="img/products/product-04.jpg" alt="" class="featured__img">
+						<div class="featured__price-block clearfix">
+							<div class="featured__price-title">Cool lingerie</div>
+							<div class="featured__price">$56</div>
+						</div>
+						<div class="featured__overlay">
+							<ul class="cart-btns clearfix">
+								<li class="cart-btns__item">
+									<a href="#" class="cart-btns__link"></a></li>
+								<li class="cart-btns__item">
+									<a href="#" class="cart-btns__link"></a></li>
+								<li class="cart-btns__item">
+									<a href="#" class="cart-btns__link"></a></li>
+								<li class="cart-btns__item">
+									<a href="#" class="cart-btns__link">add to cart</a></li>
+							</ul>
+						</div>
+					</li>
+				</ul>
+			</div>
+		</section>
+		<footer class="footer">All Rights Reserved © Dokan | Designed <a href="#" class="footer__link">ThemenGraph</a>
+		</footer>
 	</main>
 </body>
+
 </html>
