Fixed slider and product overlay

--- a/module5/index.html
+++ b/module5/index.html
@@ -36,9 +36,11 @@
 	</header>
 	<main>
 		<section class="slider">
-			<div class="overlay">
-				<h1 class="slider__title">AFFORDABLE PARIS TOURS</h1>
-				<h3 class="slider__subtitle">CITY TOURS / TOUR TICKETS / TOUR GUIDES</h3>
+			<div class="slider__overlay">
+				<div class="slider__heading">
+					<h1 class="slider__title">AFFORDABLE PARIS TOURS</h1>
+					<h3 class="slider__subtitle">CITY TOURS / TOUR TICKETS / TOUR GUIDES</h3>
+				</div>
 			</div>
 			<div class="slider__btns clearfix">
 				<button class="slider__btn prev inactive"></button>
@@ -50,80 +52,89 @@
 				<h2 class="sections-title">Featured products</h2>
 				<ul class="featured__list clearfix">
 					<li class="featured__list-item">
-						<img src="img/products/product-01.jpg" alt="" class="featured__img">
+						<div class="featured__wrap">
+							<img src="img/products/product-01.jpg" alt="" class="featured__img">
+							<div class="featured__overlay">
+								<ul class="cart-btns clearfix">
+									<li class="cart-btns__item">
+										<a href="#" class="cart-btns__link"></a></li>
+									<li class="cart-btns__item">
+										<a href="#" class="cart-btns__link"></a></li>
+									<li class="cart-btns__item">
+										<a href="#" class="cart-btns__link"></a></li>
+									<li class="cart-btns__item">
+										<a href="#" class="cart-btns__link">add to cart</a></li>
+								</ul>
+							</div>
+						</div>
 						<div class="featured__price-block clearfix">
 							<div class="featured__price-title">Blue Tshirt</div>
 							<div class="featured__price">$26</div>
 						</div>
-						<div class="featured__overlay">
-							<ul class="cart-btns clearfix">
-								<li class="cart-btns__item">
-									<a href="#" class="cart-btns__link"></a></li>
-								<li class="cart-btns__item">
-									<a href="#" class="cart-btns__link"></a></li>
-								<li class="cart-btns__item">
-									<a href="#" class="cart-btns__link"></a></li>
-								<li class="cart-btns__item">
-									<a href="#" class="cart-btns__link">add to cart</a></li>
-							</ul>
-						</div>
 					</li>
 					<li class="featured__list-item">
-						<img src="img/products/product-02.jpg" alt="" class="featured__img">
+						<div class="featured__wrap">
+							<img src="img/products/product-02.jpg" alt="" class="featured__img">
+							<div class="featured__overlay">
+								<ul class="cart-btns clearfix">
+									<li class="cart-btns__item">
+										<a href="#" class="cart-btns__link"></a></li>
+									<li class="cart-btns__item">
+										<a href="#" class="cart-btns__link"></a></li>
+									<li class="cart-btns__item">
+										<a href="#" class="cart-btns__link"></a></li>
+									<li class="cart-btns__item">
+										<a href="#" class="cart-btns__link">add to cart</a></li>
+								</ul>
+							</div>
+						</div>
 						<div class="featured__price-block clearfix">
 							<div class="featured__price-title">Woman shirt</div>
 							<div class="featured__price">$31</div>
 						</div>
-						<div class="featured__overlay">
-							<ul class="cart-btns clearfix">
-								<li class="cart-btns__item">
-									<a href="#" class="cart-btns__link"></a></li>
-								<li class="cart-btns__item">
-									<a href="#" class="cart-btns__link"></a></li>
-								<li class="cart-btns__item">
-									<a href="#" class="cart-btns__link"></a></li>
-								<li class="cart-btns__item">
-									<a href="#" class="cart-btns__link">add to cart</a></li>
-							</ul>
-						</div>
 					</li>
 					<li class="featured__list-item">
-						<img src="img/products/product-03.jpg" alt="" class="featured__img">
+						<div class="featured__wrap">
+							<img src="img/products/product-03.jpg" alt="" class="featured__img">
+							<div class="featured__overlay">
+								<ul class="cart-btns clearfix">
+									<li class="cart-btns__item">
+										<a href="#" class="cart-btns__link"></a></li>
+									<li class="cart-btns__item">
+										<a href="#" class="cart-btns__link"></a></li>
+									<li class="cart-btns__item">
+										<a href="#" class="cart-btns__link"></a></li>
+									<li class="cart-btns__item">
+										<a href="#" class="cart-btns__link">add to cart</a></li>
+								</ul>
+							</div>
+						</div>				
 						<div class="featured__price-block clearfix">
 							<div class="featured__price-title">Yellow tshirt</div>
 							<div class="featured__price">$21</div>
-						</div>
-						<div class="featured__overlay">
-							<ul class="cart-btns clearfix">
-								<li class="cart-btns__item">
-									<a href="#" class="cart-btns__link"></a></li>
-								<li class="cart-btns__item">
-									<a href="#" class="cart-btns__link"></a></li>
-								<li class="cart-btns__item">
-									<a href="#" class="cart-btns__link"></a></li>
-								<li class="cart-btns__item">
-									<a href="#" class="cart-btns__link">add to cart</a></li>
-							</ul>
-						</div>
+						</div>						
 					</li>
 					<li class="featured__list-item">
-						<img src="img/products/product-04.jpg" alt="" class="featured__img">
+						<div class="featured__wrap">
+							<img src="img/products/product-04.jpg" alt="" class="featured__img">
+							<div class="featured__overlay">
+								<ul class="cart-btns clearfix">
+									<li class="cart-btns__item">
+										<a href="#" class="cart-btns__link"></a></li>
+									<li class="cart-btns__item">
+										<a href="#" class="cart-btns__link"></a></li>
+									<li class="cart-btns__item">
+										<a href="#" class="cart-btns__link"></a></li>
+									<li class="cart-btns__item">
+										<a href="#" class="cart-btns__link">add to cart</a></li>
+								</ul>
+							</div>
+						</div>
 						<div class="featured__price-block clearfix">
 							<div class="featured__price-title">Cool lingerie</div>
 							<div class="featured__price">$56</div>
 						</div>
-						<div class="featured__overlay">
-							<ul class="cart-btns clearfix">
-								<li class="cart-btns__item">
-									<a href="#" class="cart-btns__link"></a></li>
-								<li class="cart-btns__item">
-									<a href="#" class="cart-btns__link"></a></li>
-								<li class="cart-btns__item">
-									<a href="#" class="cart-btns__link"></a></li>
-								<li class="cart-btns__item">
-									<a href="#" class="cart-btns__link">add to cart</a></li>
-							</ul>
-						</div>
+
 					</li>
 				</ul>
 			</div>
