--- a/module6/index.html
+++ b/module6/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="stylesheet" href="css/styles.css">
-	<link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Montserrat:400,700|Roboto&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Montserrat:400,700|Roboto:300i,400&display=swap"
+		rel="stylesheet">
 	<title>Module6</title>
 </head>
+
 <body>
 	<header class="header">
 		<div class="container">
@@ -31,39 +34,127 @@
 	<main>
 		<section class="services">
 			<div class="container">
-			<h2 class="header__title"><span>We work with</span>Amazing services</h2>
+				<h2 class="header__title"><span>We work with</span>Amazing services</h2>
 				<ul class="services__list">
 					<li class="services__list-item">
 						<div class="services__list-item-content">
 							<h3 class="services__list-item-title">Photography</h3>
-							<p class="services__list-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+							<p class="services__list-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+								eiusmod tempor.</p>
 						</div>
 					</li>
 					<li class="services__list-item">
 						<h3 class="services__list-item-title">Web Design</h3>
-						<p class="services__list-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+						<p class="services__list-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+							tempor.</p>
 					</li>
 					<li class="services__list-item">
 						<h3 class="services__list-item-title">Creativity</h3>
-						<p class="services__list-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+						<p class="services__list-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+							tempor.</p>
 					</li>
 					<li class="services__list-item">
 						<h3 class="services__list-item-title">CEO</h3>
-						<p class="services__list-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+						<p class="services__list-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+							tempor.</p>
 					</li>
 					<li class="services__list-item">
 						<h3 class="services__list-item-title">Css/Html</h3>
-						<p class="services__list-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+						<p class="services__list-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+							tempor.</p>
 					</li>
 					<li class="services__list-item">
 						<h3 class="services__list-item-title">digital</h3>
-						<p class="services__list-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+						<p class="services__list-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+							tempor.</p>
+					</li>
+				</ul>
+			</div>
+		</section>
+		<section class="team">
+			<div class="container">
+				<h2 class="header__title"><span>Who we are</span>Meet our team</h2>
+				<p class="team__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+					incididunt
+					ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+					aliquip ex ea commodo consequat. </p>
+				<ul class="team__list">
+					<li class="team__list-item">
+						<div class="team__img-wrap">
+							<img src="img/team-01.jpg" alt="" class="team__img" width="380" height="470">
+							<div class="team__overlay">
+								<ul class="social-list">
+									<li class="social-list__item">
+										<a href="" class="social-list__link"></a></li>
+									<li class="social-list__item">
+										<a href="" class="social-list__link"></a></li>
+									<li class="social-list__item">
+										<a href="" class="social-list__link"></a></li>
+									<li class="social-list__item">
+										<a href="" class="social-list__link"></a></li>
+								</ul>
+							</div>
+						</div>
+						<p class="team__title">Matthew Dix</p>
+						<p class="team__position">Graphic Design</p>
+					</li>
+					<li class="team__list-item">
+						<div class="team__img-wrap">
+							<img src="img/team-02.jpg" alt="" class="team__img" width="380" height="470">
+							<div class="team__overlay">
+								<ul class="social-list">
+									<li class="social-list__item">
+										<a href="" class="social-list__link"></a></li>
+									<li class="social-list__item">
+										<a href="" class="social-list__link"></a></li>
+									<li class="social-list__item">
+										<a href="" class="social-list__link"></a></li>
+									<li class="social-list__item">
+										<a href="" class="social-list__link"></a></li>
+								</ul>
+							</div>
+						</div>
+						<p class="team__title">Christopher Campbell</p>
+						<p class="team__position">Branding/UX design</p>
+					</li>
+					<li class="team__list-item">
+						<div class="team__img-wrap">
+							<img src="img/team-03.jpg" alt="" class="team__img" width="380" height="470">
+							<div class="team__overlay">
+								<ul class="social-list">
+									<li class="social-list__item">
+										<a href="" class="social-list__link"></a></li>
+									<li class="social-list__item">
+										<a href="" class="social-list__link"></a></li>
+									<li class="social-list__item">
+										<a href="" class="social-list__link"></a></li>
+									<li class="social-list__item">
+										<a href="" class="social-list__link"></a></li>
+								</ul>
+							</div>
+						</div>
+						<p class="team__title">Michael Fertig </p>
+						<p class="team__position">Developer</p>
 					</li>
 				</ul>
 			</div>
 		</section>
 	</main>
-	<footer></footer>
-	
+	<footer class="footer">
+		<div class="container">
+			<ul class="footer__list">
+				<li class="footer__list-item">
+					<p class="footer__text">© 2016 MoGo free PSD template by <a href="#" class="footer__link">Laaqiq</a>
+				</li>
+				<li class="footer__list-item">
+					<form action="#" class="footer__form">
+						<input type="text" placeholder="Your email..." class="footer__input">
+						<button type="submit" class="footer__btn">Subscribe</button>
+					</form>
+				</li>
+			</ul>
+		</div>
+	</footer>
 </body>
+
 </html>
