--- a/module8/index.html
+++ b/module8/index.html
@@ -4,25 +4,65 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link rel="stylesheet" href="css/styles.css">
 	<title>Module8</title>
 </head>
 <body>
 	<header class="header">
-		<nav class="navigation">
-			<a href="" class="logo"></a>
-			<ul class="menu-list">
-				<li class="menu-list__item">
-					<a href="" class="menu-list__link">Log In</a></li>
-				<li class="menu-list__item">
-					<a href="" class="menu-list__link">Sign Up</a></li>
-			</ul>
-		</nav>
-		<a href="" class="logo-large">URLAUBSGLÜCK</a>
-		<h1 class="header-title"></h1>
-		<button></button>
+		<div class="container">
+			<nav class="navigation">
+				<a href="" class="logo">URLAUBSGLÜCK</a>
+				<ul class="menu-list">
+					<li class="menu-list__item">
+						<a href="" class="menu-list__link">Log In</a></li>
+					<li class="menu-list__item">
+						<a href="" class="menu-list__link"><span>Sign Up</span></a></li>
+				</ul>
+			</nav>
+			<a href="" class="logo-large">URLAUBSGLÜCK</a>
+			<h1 class="header__title">Share your holiday dreams<span>And find the perfect partner to fullfill it</span></h1>
+			<a href="#" class="header__btn">Find your holiday partner</a>
+		</div>
 	</header>
 	<main>
-		<section class="partners"></section>
+		<section class="partners">
+			<div class="container">
+				<h2 class="partners__title">Meet a partner for your best holiday</h2>
+				<ul class="partners__list">
+					<li class="partners__list-item">
+						<div class="image-block">
+							<img src="./img/photo-01.png" alt="" width="121" height="121" class="partners__list-photo">
+						</div>
+						<h3 class="partners__list-title">Bradley Hunter</h3>
+						<p class="partners__list-description">Based in Chicago. I love playing tennis and loud music.</p>
+					</li>
+					<li class="partners__list-item">
+						<div class="image-block">
+							<img src="./img/photo-02.png" alt="" width="121" height="121" class="partners__list-photo">
+						</div>
+						<h3 class="partners__list-title">Lucas Marsha</h3>
+						<p class="partners__list-description">I get my inspiration from nature and objects around me. I have a
+							passion
+							to colours, typography and skateboards.</p>
+					</li>
+					<li class="partners__list-item">
+						<div class="image-block">
+							<img src="./img/photo-03.png" alt="" width="121" height="121" class="partners__list-photo">
+						</div>
+						<h3 class="partners__list-title">Heather Walker</h3>
+						<p class="partners__list-description">I'm a happy person that loves cats and climbing on mountains.</p>
+					</li>
+					<li class="partners__list-item">
+						<div class="image-block">
+							<img src="./img/photo-04.png" alt="" width="121" height="121" class="partners__list-photo">
+						</div>
+						<h3 class="partners__list-title">Bradley Hunter</h3>
+						<p class="partners__list-description">Based in Chicago. I love playing tennis and loud music.</p>
+					</li>
+				</ul>
+				<a href="" class="partners__btn">See other partners</a>
+			</div>
+		</section>
 	</main>
 </body>
 </html>
