--- a/module8/index.html
+++ b/module8/index.html
@@ -16,7 +16,7 @@
 					<li class="menu-list__item">
 						<a href="" class="menu-list__link">Log In</a></li>
 					<li class="menu-list__item">
-						<a href="" class="menu-list__link"><span>Sign Up</span></a></li>
+						<a href="" class="menu-list__link sign-up">Sign Up</a></li>
 				</ul>
 			</nav>
 			<a href="" class="logo-large">URLAUBSGLÜCK</a>
